test-cases/final-dump/higher_order_ambig.wybe
def {impure} call(f) {
    !f
}
